--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,5 @@
 {
   "alwaysUpdateLinks": true,
-  "attachmentFolderPath": "z_Attachments"
+  "attachmentFolderPath": "z_Attachments",
+  "promptDelete": false
 }
